--- a/index.html
+++ b/index.html
@@ -121,35 +121,35 @@
         <div class="row container m-auto">
 
             <div class="col-md-4" data-aos="zoom-in">
-                <div class="project-card">
+                <a href="#" target="_blank"><div class="project-card">
                     <div class="icon">🍽️</div>
                     <h3>Restaurant Website</h3>
                     <p>Online booking, menu system, admin panel & reviews.</p>
-                </div>
+                </div></a>
             </div>
 
             <div class="col-md-4" data-aos="zoom-in">
-                <div class="project-card">
+                <a href="#" target="_blank"><div class="project-card">
                     <div class="icon">🚚</div>
                     <h3>Transport Booking Website</h3>
                     <p>Online truck booking, material ordering, pricing system & admin panel.</p>
-                </div>
+                </div></a>
             </div>
 
             <div class="col-md-4" data-aos="zoom-in">
-                <div class="project-card">
+                <a href="https://gym-website-delta-rouge.vercel.app/" target="_blank"><div class="project-card">
                     <div class="icon">🏋️</div>
                     <h3>Gym Website</h3>
                     <p>Membership plans, classes, trainer section.</p>
-                </div>
+                </div></a>
             </div>
 
             <div class="col-md-4" data-aos="zoom-in">
-                <div class="project-card">
+                <a href="https://portfolio-nine-blush-38.vercel.app/" target="_blank"><div class="project-card">
                     <div class="icon">💻</div>
                     <h3>Portfolio Website</h3>
                     <p>Modern responsive personal portfolio.</p>
-                </div>
+                </div></a>
             </div>
 
         </div>
